--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 COOKIE_HASH_KEY=
 COOKIE_BLOCK_KEY=
 CRED_STORE=
-GITHUB_CLIENT_KEY
-GITHUB_CLIENT_SECRET
+GITHUB_CLIENT_KEY=
+GITHUB_CLIENT_SECRET=
+SSH_KEY=
+SSH_CERT=
